<resources>
    <string name="app_name">Registro</string>
    <string name="nombreC">Nombre Completo</string>
    <string name="fechaNac">Fecha de Nacimiento</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="descripcionCont">Descripción de Contacto</string>
    <string name="btnSiguinete">Siguiente</string>
    <string name="confD">Confirmación de Datos</string>
    <string name="btnEdit">Editar datos</string>
    <string name="valores">valores</string>
</resources>
