<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirmacion"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ni.edu.unan.te.registro.Confirmacion">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/confD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
           >

            <TextView
                android:text="@string/nombreC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:paddingTop="@dimen/tvpad"
                android:paddingBottom="@dimen/tvpad"/>

            <TextView
                android:text="@string/fechaNac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:paddingTop="@dimen/tvpad"
                android:paddingBottom="@dimen/tvpad"/>

            <TextView
                android:text="@string/telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:paddingTop="@dimen/tvpad"
                android:paddingBottom="@dimen/tvpad"/>

            <TextView
                android:text="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:paddingTop="@dimen/tvpad"
                android:paddingBottom="@dimen/tvpad"/>

            <TextView
                android:text="@string/descripcionCont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:paddingTop="@dimen/tvpad"
                android:paddingBottom="@dimen/tvpad"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:text="@string/nombreC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvNombreconf"
                android:paddingTop="@dimen/tvpad"
                android:paddingBottom="@dimen/tvpad"/>

            <TextView
                android:text="@string/fechaNac"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvFechaConf"
                android:paddingTop="@dimen/tvpad"
                android:paddingBottom="@dimen/tvpad"/>

            <TextView
                android:text="@string/telefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvTelefonoConf"
                android:paddingTop="@dimen/tvpad"
                android:paddingBottom="@dimen/tvpad"/>

            <TextView
                android:text="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvEmailConf"
                android:paddingTop="@dimen/tvpad"
                android:paddingBottom="@dimen/tvpad"/>

            <TextView
                android:text="@string/descripcionCont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvDescripcionConf"
                android:paddingTop="@dimen/tvpad"
                android:paddingBottom="@dimen/tvpad"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:text="@string/btnEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnEditar"
        android:theme="@style/miRaised"/>

</LinearLayout>
